# palo-alto-grafana-monitoring

./: .gitignore  LICENSE  README.md  data_analyzer.py  influxdb_converter.py  obfuscate_json.py  pa_query.py  pyproject.toml  pytest.ini  requirements.txt  traffic_viewer.py
config/: .gitignore  config.yaml.example  settings.py
docs/: README.md  architecture.md  diagrams-quick-reference.md  influxdb_configuration.md  influxdb_measurements.md
grafana/: palo_alto_dashboard.json
src/palo_alto_client/: auth.py  client.py  exceptions.py
src/stats/: __init__.py  global_counters.py  global_protect.py  network_interfaces.py  routing.py  system.py  vpn_tunnels.py
src/traffic_viewer/: __init__.py  app.py  constants.py  models.py  screens.py  styles.py  utils.py  widgets.py
src/utils/: cli.py  logger.py  parsers.py  stats_config.py  table_formatters.py  validators.py
tests/: README.md  __init__.py  conftest.py  firewall_config.example.yaml  test_client.py  test_config.py  test_data_analyzer.py  test_data_structure.py  test_influxdb_converter.py  test_integration.py  test_pa_query.py  test_settings.py  test_stats.py  test_system_stats.py  test_unified_client.py  test_utils.py
